# sp-seg-tool

./: .gitignore  README.md  pyproject.toml
resources/: conf.toml  similarity.t7
sp-seg-tool/: config.py  main.py
sp-seg-tool/backend/: openers.py  state.py
sp-seg-tool/gui/: scene.py
sp_seg_tool/backend/: state.py
